# GeoTerrain

./: .gitignore  AGENTS.md  CMakeLists.txt  GeoTerrain.uplugin  README.md  build_and_deploy.bat  build_ninja.bat
BuildPackage/HostProject/: HostProject.uproject
EnginesAddOn/GeoTerrainBlender/: README.md  operators.py
EnginesAddOn/GeoTerrainUnigine/: .gitignore  CMakeLists.txt  README.md  build_ninja.bat  local_paths.cmake.example
EnginesAddOn/GeoTerrainUnigine/Content/: geoterrain_brush_albedo_overwrite.basebrush
EnginesAddOn/GeoTerrainUnigine/source/core/: GeoTerrainBridgeEditorPlugin.cpp  GeoTerrainBridgeEditorPlugin.h  GeoTerrainBridgeEditorPlugin.json  NodeTreeWalker.h
EnginesAddOn/GeoTerrainUnigine/source/importer/: GeoTerrainImporter.cpp  GeoTerrainImporter.h
EnginesAddOn/GeoTerrainUnigine/source/ui/: GeoTerrainController.cpp  GeoTerrainController.h  GeoTerrainPanel.cpp  GeoTerrainPanel.h
GeoTerrainBridge/: CMakeLists.txt  GeoTerrainBridge.json  README.md  build_bridge.bat
GeoTerrainBridge/src/: bridge_panel.cpp  bridge_panel.h  bridge_plugin.cpp  bridge_plugin.h  package_reader.cpp  package_reader.h
GeoTerrainStudio/: CODE_REVIEW.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  start-electron.bat  tailwind.config.cjs  tailwind.config.js  test-electron.js  test_app.js  test_electron.js  tsconfig.json  vite.config.ts  vitest.config.ts
GeoTerrainStudio/EnginesAddOn/Blender/: README.md  __init__.py  operators.py  panels.py
GeoTerrainStudio/electron/: export-engine.cjs  export-engine.js  export-engine.ts  geotiff-writer.js  geotiff-writer.ts  main.cjs  main.js  main.ts  mask-generator.ts  osm-3d-extractor.ts  overpass-client.ts  preload.cjs  preload.js  preload.ts  satellite-vegetation-client.ts  tsconfig.json  vector-rasterizer.ts
GeoTerrainStudio/electron/__tests__/: export-integration.property.test.ts  mask-generator.property.test.ts  osm-3d-extractor.property.test.ts  osm-3d-extractor.test.ts  overpass-client.property.test.ts  overpass-parsing.property.test.ts  parameter-validation.property.test.ts  terrain-elevation-bug-condition.property.test.ts  terrain-elevation-preservation.property.test.ts  vector-rasterizer.property.test.ts  vegetation-chunking.property.test.ts  vegetation-mask-bug-condition.property.test.ts  vegetation-mask-preservation.property.test.ts
GeoTerrainStudio/electron/native/: .gitignore  binding.gyp
GeoTerrainStudio/electron/native/src/: addon.cpp  datasource_bridge.cpp  pipeline_bridge.cpp  session_bridge.cpp
GeoTerrainStudio/src/: App.tsx  index.css  vite-env.d.ts
GeoTerrainStudio/src/__tests__/: geocoding-service.property.test.ts  place-labels.test.ts
GeoTerrainStudio/src/components/ExportPanel/: ExportPanel.tsx
GeoTerrainStudio/src/components/JobQueue/: JobQueue.tsx
GeoTerrainStudio/src/components/LayerStack/: LayerStack.tsx
GeoTerrainStudio/src/components/MapViewport/: MapViewport.tsx
GeoTerrainStudio/src/components/SearchBar/: SearchBar.tsx
GeoTerrainStudio/src/components/Toast/: Toast.tsx
GeoTerrainStudio/src/components/Viewer3D/: MaskDebugOverlay.ts  MaskSampler.ts  MeshBuilder3D.ts  TerrainViewer3D.tsx  TreeGeometry.ts  TreeScatterer.ts
GeoTerrainStudio/src/core/: geocoding-service.ts  ipc.ts  store.ts
GeoTerrainStudio/src/types/: terrain.js  terrain.js.map  terrain.ts
GeoTerrainStudio/tests/: exploration.test.ts  preservation.test.ts  validate-path.test.ts
Resources/: MapPicker.html
UnrealGeoTerrain/: GeoTerrain.uplugin  README_UNREAL.md  Setup_GDAL.ps1
UnrealGeoTerrain/Source/GeoTerrain/: GeoTerrain.Build.cs
UnrealGeoTerrain/Source/GeoTerrain/Private/: GeoTerrainModule.cpp
UnrealGeoTerrain/Source/GeoTerrain/Public/: GeoChunkPlanner.h  GeoGenerationCoordinator.h  GeoGenerationTypes.h  GeoResult.h  GeoTileDownloader.h
source/: DEMFetcher.cpp  DEMFetcher.h  GdalUtils.cpp  GdalUtils.h  GeoBounds.h  GeoTerrainEditorPlugin.cpp  GeoTerrainPanel.cpp  GeoTerrainPanel.h  MapPanel.cpp  MapPanel.h  MaskGenerator.cpp  MaskGenerator.h  OSMParser.cpp  OSMParser.h  ShapefileExporter.cpp  ShapefileExporter.h  TerrainPipeline.cpp  TerrainPipeline.h  TileDownloader.cpp  TileDownloader.h
source/GeoTerrain/: GeoTerrain.Build.cs
source/GeoTerrain/Private/: GeoTerrainModule.cpp
source/GeoTerrain/Private/Application/: GeoGenerationCoordinator.cpp
source/GeoTerrain/Private/Pipeline/: GeoDemFetcher.cpp  GeoLandscapeImporter.cpp  GeoMaskGenerator.cpp  GeoR16BatchImporter.cpp  GeoTileDownloader.cpp
source/GeoTerrain/Private/UI/: GeoTerrainJsHandler.cpp  GeoTerrainJsHandler.h  GeoWorldCoastline.h  SGeoTerrainPanel.cpp  SGeoTerrainPanel.h  SGeoWorldMap.cpp  SGeoWorldMap.h
source/GeoTerrain/Public/: GeoBounds.h  GeoChunkPlanner.h  GeoDemFetcher.h  GeoGenerationCoordinator.h  GeoGenerationTypes.h  GeoLandscapeImporter.h  GeoMaskGenerator.h  GeoR16BatchImporter.h  GeoRunContext.h  GeoTerrainModule.h  GeoTileDownloader.h
source/application/: AsyncJob.cpp  AsyncJob.h  ChunkPlanner.cpp  ChunkPlanner.h  ExportCoordinator.cpp  ExportCoordinator.h  GenerationCoordinator.cpp  GenerationCoordinator.h  GeoTerrainController.cpp  GeoTerrainController.h  SandwormExporter.cpp  SandwormExporter.h  TerrainBuilder.cpp  TerrainBuilder.h
source/domain/: GenerationTypes.h  GeoBounds.h  Result.h  Validation.cpp  Validation.h
source/infrastructure/: GdalUtils.cpp  GdalUtils.h  ManifestWriter.cpp  ManifestWriter.h  OverlayLoader.cpp  OverlayLoader.h  RunContext.h
source/pipeline/: DEMFetcher.cpp  DEMFetcher.h  MaskGenerator.cpp  MaskGenerator.h  OSMParser.h  ShapefileExporter.h  TileDownloader.cpp  TileDownloader.h
source/plugin/: GeoTerrainEditorPlugin.cpp  GeoTerrainEditorPlugin.h  GeoTerrainEditorPlugin.json
source/ui/: GenerationSettingsSection.cpp  GenerationSettingsSection.h  GeoTerrainPanel.cpp  GeoTerrainPanel.h  MapPanel.cpp  MapPanel.h  MapSelectionSection.cpp  MapSelectionSection.h  RunConsoleSection.cpp  RunConsoleSection.h  SourceSettingsSection.cpp  SourceSettingsSection.h  TerrainBuilderSection.cpp  TerrainBuilderSection.h
tests/: GeoTerrainCoreTests.cpp
(+16 files in other folders)
